--- a/.github/workflows/Feature_Branch_CD_example.yml
+++ b/.github/workflows/Feature_Branch_CD_example.yml
@@ -1,37 +1,10 @@
 
-name: CI/CD
-
-on: [push]
-
+name: CD
+on:
+  pull_request:
+    branches:
+      - main
 jobs:
-  development_evironment:
-    name: Development Enviroment
-    runs-on: ubuntu-latest    
-    steps:
-    # Clone of the code
-    - uses: actions/checkout@v1
-      name: Clone code  
-    - name: Linting
-      run: echo Linting code.
-    - uses: actions/setup-python@v2
-      name : Build
-    - name: Unit Testing
-      run: echo Run Unit testing
-    - uses: jannekem/run-python-script-action@v1
-      name : Run Code
-      with:
-       script: |
-              print("Hello World")
-  deployment_integration:
-    name: Deploy in Integration Environment
-    needs: development_evironment
-    runs-on: ubuntu-latest
-    environment: 
-      name: integration
-      url: https://github.com
-    steps:
-      - name: Deploy in Integration
-        run: echo Coding is deployed
   integration_enviroment:
     name: Integration Environment
     needs: deployment_integration
