--- a/.github/workflows/Feature_Branch_CD_example.yml
+++ b/.github/workflows/Feature_Branch_CD_example.yml
@@ -10,8 +10,14 @@ jobs:
     needs: deployment_integration
     runs-on: ubuntu-latest    
     steps:
-    - uses: actions/checkout@v1
-      name: Clone code 
+     - uses: actions/checkout@v1
+      name: Clone code  
+    - name: Linting
+      run: echo Linting code.
+    - uses: actions/setup-python@v2
+      name : Build
+    - name: Unit Testing
+      run: echo Run Unit testing
     - uses: jannekem/run-python-script-action@v1
       name : Run Code
       with:
