--- a/.github/workflows/Feature_Branch_CD_example.yml
+++ b/.github/workflows/Feature_Branch_CD_example.yml
@@ -2,8 +2,9 @@
 name: CD
 on:
   pull_request:
+    types: [closed]
     branches:
-      - main
+      - feature/**
 jobs:
   integration_enviroment:
     name: Integration Environment
