--- a/.github/workflows/Feature_Branch_CD_example.yml
+++ b/.github/workflows/Feature_Branch_CD_example.yml
@@ -1,10 +1,12 @@
 
 name: CD
 on:
+  # runs on pushes to the main branch
+  push:
+    branches: [main]
+  # also runs inside pull requests that target the main branch
   pull_request:
-    types: [closed]
-    branches:
-      - feature/**
+    branches: [main]
 jobs:
   integration_enviroment:
     name: Integration Environment
